# Sui-CRM

./: Cargo.toml  package.json  suicrm-slides.html
.claude/: settings.local.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: package.json
apps/web/app/: layout.tsx
apps/web/lib/: api.ts
bots/: .env.example  DEPLOYMENT.md  INTEGRATION_CHECKLIST.md  docker-compose.yml  verify.sh
bots/discord-bot/: .env.example  Dockerfile  README.md  package.json
bots/discord-bot/src/: handlers.ts  index.ts  types.ts  webhook.ts
bots/farcaster-bot/: .env.example  .eslintrc.json  README.md  package.json
bots/farcaster-bot/src/: index.ts  types.ts  webhook.ts
bots/telegram-bot/: .dockerignore  .env.example  README.md  package.json
bots/telegram-bot/src/: handlers.ts  index.ts  types.ts  (+1 more)
bots/twitter-bot/: .env.example  README.md  package.json
contracts/: Published.toml
contracts/sources/: interaction_log.move  org.move  profile.move  seal.move
contracts/sui_crm/: Move.toml
docs/: ARCHITECTURE.md  BUG.md  CONFIG_SERVICES_UPDATE.md  HANDOVER.md  IMPLEMENTATION_AND_USERFLOW.md  MEMORY.md  MINIMAL_ARCHITECTURE_SUMMARY.md  QUICK_REFERENCE.md  SEAL_ACCESS_CONTROL.md  TECHNICAL_ARCHITECTURE.md  USER_FLOW.md  module_deployed_details.md  package_digest.md
infra/: surreal_schema.sql
services/: decryptionService.ts
web/: bun.lockb  eslint.config.mjs  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: app-sidebar.tsx
web/hooks/: useSponsoredTransaction.ts  useSuiNS.ts  useUnifiedAuth.ts
web/lib/: mongodb.ts  surreal.ts
(+54 files in other folders)
